cleanup unused CloneRepositoryController (#1169)
